examples/k8s/ha-external-dns-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-sample-app
  name: k8s-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-sample-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-sample-app
    spec:
      # nodeSelector:
      #   demo: 'yes'
      containers:
      - image: public.ecr.aws/r0z1v2q2/k8s-sample-app:1.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
        name: k8s-sample-app
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-sample-app
  name: k8s-sample-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-sample-app
  sessionAffinity: None
  type: NodePort
