examples/k8s/ha-external-dns-ingress/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: k8s-sample-app
spec:
  rules:
  - host: k8s-sample-app.mhorejsek.traskaws.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-sample-app
            port:
              number: 80
